--- a/theme/stylesheets/styles_smallscreen.css
+++ b/theme/stylesheets/styles_smallscreen.css
@@ -38,10 +38,15 @@ Small-size specific media CSS
     margin-right: 15px;
   }
 
+  #banner .middle {
+    max-width: 660px;
+    margin: 0 auto 0 auto;
+  }
+
   section {
     border: 1px solid #e5e5e5;
     border-width: 1px 0;
-    padding: 20px auto;
+    padding: 20px 30px;
     margin: 20px auto 20px;
     max-width: 600px;
   }
